--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -42,11 +42,11 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       # 步骤 4：登录 Docker Hub（如需推送 Docker Hub）
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+      # - name: Login to Docker Hub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKER_HUB_USERNAME }}
+      #     password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
       # 步骤 5：登录 GHCR（如需推送 GHCR）
       - name: Login to GHCR
